Added newely added file path to the user layout

--- a/app/views/layout/user-layout.hbs
+++ b/app/views/layout/user-layout.hbs
@@ -16,6 +16,8 @@
 		<!--===============================================================================================-->
 			<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 		<!--===============================================================================================-->
+			<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/fontawesome.min.css">
+		<!--===============================================================================================-->
 			<link rel="stylesheet" type="text/css" href="fonts/iconic/css/material-design-iconic-font.min.css">
 		<!--===============================================================================================-->
 			<link rel="stylesheet" type="text/css" href="fonts/linearicons-v1.0.0/icon-font.min.css">
