Added path for logo in user Layout

--- a/app/views/layout/user-layout.hbs
+++ b/app/views/layout/user-layout.hbs
@@ -84,7 +84,7 @@
 					<nav class="limiter-menu-desktop container">
 						
 						<!-- Logo desktop -->		
-						<a href="#" class="logo">
+						<a href="/" class="logo">
 							<img src="/platform-images/icons/logo-01.png" alt="IMG-LOGO">
 						</a>
 
