Updated wallet balence display in profile page

--- a/app/views/user/user-profile.hbs
+++ b/app/views/user/user-profile.hbs
@@ -2099,7 +2099,7 @@
                                     <b class="ni education_hat mr-2">Wallet Balence :
 
                                         {{#if userWalletData}}
-                                        ₹ {{userWalletData.balence}}
+                                        ₹ {{userWalletData.walletBalance}}
                                         {{else}}
                                         ₹ 0
                                         {{/if}}
