--- a/app/views/user/user-profile.hbs
+++ b/app/views/user/user-profile.hbs
@@ -2042,7 +2042,7 @@
             <div class="container-fluid d-flex align-items-center">
                 <div class="row">
                     <div class="col-lg-7 col-md-10">
-                        <h1 class="display-2 text-white">Hello {{user.name}}</h1>
+                        <h1 class="display-2 text-white">Hello {{userCollectionData.name}}</h1>
                     </div>
                 </div>
             </div>
@@ -2075,25 +2075,25 @@
                                 <div class="col">
                                     <div class="card-profile-stats d-flex justify-content-center mt-md-5">
                                         <div>
+                                            <span class="heading">{{cartCount}}</span>
+                                            <span class="description">CartItems</span>
+                                        </div>
+                                        <div>
                                             <span class="heading">20</span>
                                             <span class="description">Wishlist</span>
                                         </div>
                                         <div>
-                                            <span class="heading">10</span>
-                                            <span class="description">CartItems</span>
-                                        </div>
-                                        <div>
-                                            <span class="heading">89</span>
+                                            <span class="heading"> {{ordersCount}} </span>
                                             <span class="description">Purchases</span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="text-center">
-                                <h3>{{user.name}}</h3>
+                                <h3>{{userCollectionData.name}}</h3>
 
-                                {{#if user.age}}
-                                <span class="font-weight-light">Age : {{user.age}}</span>
+                                {{#if userCollectionData.age}}
+                                <span class="font-weight-light">Age : {{userCollectionData.age}}</span>
                                 {{/if}}
 
                                 <hr>
@@ -2114,7 +2114,7 @@
 
                                 <hr class="my-4">
                                 <b class="ni education_hat mr-2">About me:</b>
-                                <p><i>{{user.about}}</i></p>
+                                <p><i>{{userCollectionData.userTagline}}</i></p>
                             </div>
                         </div>
                     </div>
@@ -2145,7 +2145,7 @@
                                         <div class="col-lg-6">
                                             <div class="form-group focused">
                                                 <label class="form-control-label" for="input-username">Name</label>
-                                                <span id="input-username" class="form-control form-control-alternative" readonly>{{user.name}}</span>
+                                                <span id="input-username" class="form-control form-control-alternative" readonly>{{userCollectionData.name}}</span>
                                             </div>
                                         </div>
 
@@ -2153,7 +2153,7 @@
                                             <div class="form-group focused">
                                                 <label class="form-control-label" for="input-username">User Name</label>
                                                 <span id="input-username" class="form-control form-control-alternative"
-                                                    readonly>@ {{user.userName}}</span>
+                                                    readonly>@ {{userCollectionData.userName}}</span>
                                             </div>
                                         </div>
 
@@ -2166,7 +2166,7 @@
                                                 <label class="form-control-label" for="input-email">Email
                                                     address</label>
                                                 <span id="input-username" class="form-control form-control-alternative"
-                                                    readonly>{{user.email}}</span>
+                                                    readonly>{{userCollectionData.email}}</span>
                                             </div>
                                         </div>
                                     </div>
@@ -2176,7 +2176,7 @@
                                                 <label class="form-control-label" for="input-first-name">Phone
                                                     Number</label>
                                                 <span id="input-username" class="form-control form-control-alternative"
-                                                    readonly>{{user.phone}}</span>
+                                                    readonly>{{userCollectionData.phone}}</span>
                                             </div>
                                         </div>
                                         <div class="col-lg-6">
@@ -2184,7 +2184,7 @@
                                                 <label class="form-control-label" for="input-first-name">Alternative
                                                     Phone Number</label>
                                                 <span id="input-username" class="form-control form-control-alternative"
-                                                    readonly>{{user.phoneNumberAlternative}}</span>
+                                                    readonly>{{userCollectionData.phoneNumberAlternative}}</span>
                                             </div>
                                         </div>
                                     </div>
@@ -2286,7 +2286,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalCenterTitle">Hi {{user.name}}, please provide details for updating your profile.</h5>
+                    <h5 class="modal-title" id="exampleModalCenterTitle">Hi {{userCollectionData.name}}, please provide details for updating your profile.</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -2295,7 +2295,7 @@
                 <div class="modal-body">
 
 
-                    <form action="/user/update-my-profile/{{user._id}}" method="POST">
+                    <form action="/update-my-profile" method="POST">
 
                         <div class="form-row">
 
@@ -2306,7 +2306,7 @@
                                         <span class="input-group-text" id="inputGroupPrepend2">@</span>
                                     </div>
                                     <input type="text" class="form-control" id="validationDefaultUsername"
-                                        placeholder="Username" value="{{user.userName}}" aria-describedby="inputGroupPrepend2" required>
+                                        placeholder="Username" name="userName" value="{{userCollectionData.userName}}" aria-describedby="inputGroupPrepend2" required>
                                 </div>
                             </div>
 
@@ -2317,14 +2317,24 @@
                             <div class="col-md-4 mb-3">
                                 <label for="validationDefault01">First name</label>
                                 <input name="name" type="text" class="form-control" id="validationDefault01" placeholder="First name"
-                                    value="{{user.name}}" required>
+                                    name="name" value="{{userCollectionData.name}}" required>
                             </div>
 
                             <div class="col-md-4 mb-3">
                                 <label for="validationDefault02">Last name</label>
-                                <input name="lastName" type="{{user.lastname}}" class="form-control" id="validationDefault02" placeholder="Last name"
-                                    value="{{user.lastName}}" required>
+                                <input name="lastName" type="{{userCollectionData.lastname}}" class="form-control" id="validationDefault02" placeholder="Last name"
+                                    name="lastName" value="{{userCollectionData.lastName}}" required>
                             </div>
+
+                            <div class="form-row">
+
+                            <div class="col-md-6 mb-3">
+                                <label for="validationDefault03">Age</label>
+                                <input type="number" name="age" value="{{userCollectionData.age}}"class="form-control" id="validationDefault03" placeholder="Your age in numbers"
+                                    required>
+                            </div>
+
+                        </div>
 
                         </div>
 
@@ -2332,7 +2342,17 @@
 
                             <div class="col-md-6 mb-3">
                                 <label for="validationDefault03">Alternative Phone Number</label>
-                                <input type="text" value="{{user.phoneNumberAlternative}}"class="form-control" id="validationDefault03" placeholder="Alternative Phone Number"
+                                <input type="number" name="phoneNumberAlternative" value="{{userCollectionData.phoneNumberAlternative}}"class="form-control" id="validationDefault03" placeholder="Alternative Phone Number"
+                                    required>
+                            </div>
+
+                        </div>
+
+                        <div class="form-row">
+
+                            <div class="col-md-6 mb-3">
+                                <label for="validationDefault03">About Me</label>
+                                <input type="text" name="userTagline" value="{{userCollectionData.userTagline}}"class="form-control" id="validationDefault03" placeholder="Jot something about you..."
                                     required>
                             </div>
 
