Modified user profile page button to redirect to manage address page

--- a/app/views/user/user-profile.hbs
+++ b/app/views/user/user-profile.hbs
@@ -2257,7 +2257,7 @@
                                     <br>
 
                                     <div class="col-4 text-left">
-                                        <a href="#!" class="btn btn-sm btn-info">Manage Addresses</a>
+                                        <a href="/manage-my-address" class="btn btn-sm btn-info">Manage Addresses</a>
                                     </div>
 
                                 </div>
