--- a/app/views/user/user-profile.hbs
+++ b/app/views/user/user-profile.hbs
@@ -2066,8 +2066,8 @@
                         </div>
                         <div class="card-header text-center border-0 pt-8 pt-md-4 pb-0 pb-md-4">
                             <div class="d-flex justify-content-between">
-                                <a href="#" class="btn btn-sm btn-info mr-4"></a>
-                                <a href="#" class="btn btn-sm btn-default float-right"></a>
+                                <a href="/orders" class="btn btn-sm btn-info mr-4">Orders</a>
+                                <a href="/manage-my-address" class="btn btn-sm btn-default float-right">Address</a>
                             </div>
                         </div>
                         <div class="card-body pt-0 pt-md-4">
