--- a/app/views/user/user-profile.hbs
+++ b/app/views/user/user-profile.hbs
@@ -2192,7 +2192,8 @@
                                 </div>
 
                                 <hr class="my-4">
-                                <!-- Address -->
+
+                                <!-- ============================= Address ============================= -->
                                 <h6 class="heading-small text-muted mb-4">Primary Address</h6>
                                 <div class="pl-lg-4">
                                     <div class="row">
@@ -2201,7 +2202,7 @@
                                                 <label class="form-control-label" for="input-address">Address Line
                                                     1</label>
                                                 <span id="input-username" class="form-control form-control-alternative"
-                                                    readonly>{{userAddress.addressLine1}}</span>
+                                                    readonly>{{primaryAddress.addressLine1}}</span>
                                             </div>
                                         </div>
                                     </div>
@@ -2211,7 +2212,7 @@
                                                 <label class="form-control-label" for="input-address">Address Line
                                                     2</label>
                                                 <span id="input-username" class="form-control form-control-alternative"
-                                                    readonly>{{userAddress.addressLine2}}</span>
+                                                    readonly>{{primaryAddress.addressLine2}}</span>
                                             </div>
                                         </div>
                                     </div>
@@ -2220,28 +2221,28 @@
                                             <div class="form-group focused">
                                                 <label class="form-control-label" for="input-city">Street</label>
                                                 <span id="input-username" class="form-control form-control-alternative"
-                                                    readonly>{{userAddress.street}}</span>
+                                                    readonly>{{primaryAddress.street}}</span>
                                             </div>
                                         </div>
                                         <div class="col-lg-4">
                                             <div class="form-group focused">
                                                 <label class="form-control-label" for="input-country">City</label>
                                                 <span id="input-username" class="form-control form-control-alternative"
-                                                    readonly>{{userAddress.city}}</span>
+                                                    readonly>{{primaryAddress.city}}</span>
                                             </div>
                                         </div>
                                         <div class="col-lg-4">
                                             <div class="form-group focused">
                                                 <label class="form-control-label" for="input-country">State</label>
                                                 <span id="input-username" class="form-control form-control-alternative"
-                                                    readonly>{{userAddress.state}}</span>
+                                                    readonly>{{primaryAddress.state}}</span>
                                             </div>
                                         </div>
                                         <div class="col-lg-4">
                                             <div class="form-group focused">
                                                 <label class="form-control-label" for="input-country">Country</label>
                                                 <span id="input-username" class="form-control form-control-alternative"
-                                                    readonly>{{userAddress.country}}</span>
+                                                    readonly>{{primaryAddress.country}}</span>
                                             </div>
                                         </div>
                                         <div class="col-lg-4">
@@ -2249,7 +2250,7 @@
                                                 <label class="form-control-label" for="input-country">Postal
                                                     code</label>
                                                 <span id="input-username" class="form-control form-control-alternative"
-                                                    readonly>{{userAddress.postalNumber}}</span>
+                                                    readonly>{{primaryAddress.postalCode}}</span>
                                             </div>
                                         </div>
                                     </div>
